# whiz

./: LICENSE  README.md  pyproject.toml
src/whiz/: __init__.py  ask.py  augmentations.py  feature.py  interface.py  proxy.py
src/whiz/backends/: __init__.py  anthropic.py  base.py  openai.py
tests/: test_feature.py  test_proxy.py
tests/test_feature/: test_augment_schema.yml
